--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <script type="text/javascript" 	src="components/jquery/dist/jQuery-2.1.4.min.js"></script>
 <script type="text/javascript" 	src="components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/angular.min.js"></script>
+<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js" type="text/javascript"></script>
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/drop-controller.js"></script>
-
+<script type="text/javascript" src="js/services/csv-service.js"></script>
 <style>
 #dropzone {
 	border: 2px dashed #ccc;
@@ -20,9 +21,9 @@
 }
 
 .upload-drop-zone {
-	height: 35px;
-	border-width: 2px;
-	margin-bottom: 20px;
+	    height: 41px;
+    border-width: 4px;
+    margin-bottom: 0px;
 }
 
 /* skin.css Style*/
@@ -38,66 +39,93 @@
 	color: #222;
 	border-color: #222;
 }
-
+body{
+background-color:#8080800d
+}
+.pagination {
+    display: inline-block;
+    padding-left: 0;
+    margin: 0px 0;
+    border-radius: 4px;
+}
 </style>
 </head>
 <body>
    <div ng-controller="dropController">
    <div class="row">
 	<div class="col-md-12">
-		<div class="panel panel-default" style="height:100px">
-			<div class="panel-heading">
-				<strong>CSV DROP ZONE </strong>
-			<span class="pull-right" style="margin-top: -6px;" ng-if="csvFile!=''"><i class="fa fa-file-text-o fa-2x"
-					aria-hidden="true"></i>{{csvFile}}</span>	
-			</div>
-			<div class="panel-body">
+		<div class="box box-info">
+		   <div class="box-header with-border">
+              <h3 class="box-title">CSV DROP ZONE</h3>
+              <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+              </div>
+            </div>
+			 <div class="box-body">
 				<div class="upload-drop-zone" id="drop-zone">Drop CSV Files
-				<a href ng-click="getContents()" id="btnView" class="btn btn-primary pull-right">View Files</a>	
+				<!-- <a href ng-click="getContents()" id="btnView" class="btn btn-primary pull-right">View Files</a>	 -->
 				</div>
-				
+			</div>
+			<div class="box-footer">
+				<div class="col-md-12">
+					<span class="badge">{{csvFile}}</span>
+				</div>
 			</div>
 		</div>
 	</div>
 	</div>
-<div class="row">	
+	<div class="row">	
 	<div class="col-md-6">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<strong>CSV DATA</strong>
-			</div>
-			<div class="panel-body" id="csvdataid" >
-				<div class="row" style="overflow-x:auto;">
-				<table class="table table-bordered" >
-					<tbody>
+		<div class="box box-info">
+            <div class="box-header with-border">
+              <h3 class="box-title">CSV DATA</h3>
+              <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+              </div>
+            </div>
+            <div class="box-body">
+              <div class="table-responsive" style="height:300px">
+              	<label>Search:</label> <input type="text" ng-model="search.name" placeholder="Search" />
+                <table class="table no-margin">
+                	<tbody>
 						<tr>
 							<th ng-repeat="(k,v) in csvData.header">{{v}}</th>
 						</tr>
-						<tr ng-repeat="val in csvData.rowObj">
+						<tr ng-repeat="val in filtered = csvData.rowObj | filter:search | startFrom:(currentPage-1)*entryLimit | limitTo:entryLimit">
 							<td ng-repeat="(k,v) in val">{{v.v}}</td>
 						</tr>
 					</tbody>
-					</table>
-				</div>	
-			</div>
-		</div>
+                </table>
+              </div>
+            </div>
+            <div class="box-footer clearfix">
+            	<div class="col-md-12">
+            		<pagination page="currentPage" max-size="noOfPages" total-items="totalItems" items-per-page="entryLimit"></pagination>
+					<a href  class="btn btn-primary pull-right">Total Records: {{csvData.rowObj.length}}</a>	
+				</div>
+            </div>
+          </div>
 	</div>
 		<div class="col-md-6">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<strong>CSV / DB COLUMN MAPPING</strong>
+		<div class="box box-info">
+            <div class="box-header with-border">
+				<strong>CSV - DB COLUMN MAPPING</strong>
 			</div>
-			<div class="panel-body">
-				<div class="row">
+			<div class="box-body">
+				<div class="table-responsive" style="height:300px">
 				<table class="table table-bordered">
 					<tbody>
-						<tr><th>CSV Columns</th></tr>
+						<tr><th>CSV Columns</th><th>DB Columns</th></tr>
 						<tr ng-repeat="(k,v) in csvData.header">
 							<td>{{v}}
 							</td>
 							<td>
 							<select name="csvSelect{{$index}}" id="csvSelect{{$index}}"  class="form-control"
-								ng-model="selectedMap[$index]" ng-change="getMapValues($index,selectedMap[$index], v)">
+								ng-model="selectedMap[$index]" ng-change="populatedDataMap($index,selectedMap[$index], v)">
 							    <option value="">SELECT COLUMN</option>
 								<option ng-repeat="val in dataFields"  value="{{val}}">
            							{{val}}
@@ -108,27 +136,9 @@
 					</tbody>
 				</table>
 				</div>	
-				<!-- <div class="col-md-6">
-				<table class="table table-bordered">
-					<tbody>
-						<tr><th>DB Columns</th></tr>
-						<tr ng-repeat="val in dataFields">
-							<td>
-							<select name="dbSelect{{$index}}" id="dbSelect{{$index}}"  class="form-control"
-								ng-model="selectedMap[$index].dbCol" ng-change="getMapValues($index)">
-							    <option value="">SELECT COLUMN</option>
-								<option  ng-repeat="val in dataFields"  value="{{val}}">
-           							{{val}}
-       							</option>
-							</select>
-						   </td>
-						</tr>
-					</tbody>
-				</table>	
-				</div> -->
 			</div>
-			<div class="panel-footer">
-				<div class="row">
+			<div class="box-footer">
+				<div class="col-md-12">
 					<a href ng-click="getCSVDBMap()" id="mapBtn" class="btn btn-primary pull-right">View Mapped Object</a>	
 				</div>
 			</div>
