--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" 	src="components/jquery/dist/jQuery-2.1.4.min.js"></script>
 <script type="text/javascript" 	src="components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/angular.min.js"></script>
-<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js" type="text/javascript"></script>
+<script type="text/javascript" src="components/angular-bootstrap/ui-bootstrap-tpls-0.10.0.js" ></script>
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/drop-controller.js"></script>
 <script type="text/javascript" src="js/services/csv-service.js"></script>
