--- a/index.html
+++ b/index.html
@@ -63,11 +63,16 @@ background-color:#42383826
 .currentSelected a{
 color:#fff
 }
+
+.table-striped>tbody>tr:nth-of-type(odd) {
+    background-color: #dcd7d78a;
+}
 </style>
 </head>
 <body>
    <div ng-controller="dropController">
    <div class="row">
+   <div class="col-md-12">
 	<div class="col-md-3">
 		<div class="box box-info">
 		   <div class="box-header with-border">
@@ -85,26 +90,60 @@ color:#fff
 			</div>
 			<div class="box-footer">
 				 <div class="col-md-4">
-					<span class="badge">{{csvFile}}</span>
+					<span class="badge"></span>
+				</div>
+			</div>
+		</div>
+		<div class="box box-info">
+            <div class="box-header with-border">
+				<strong>CSV - DB COLUMN MAPPING</strong>
+			</div>
+			<div class="box-body">
+				<div class="table-responsive" style="height:350px">
+				<table class="table table-striped">
+					<tbody>
+						<tr><th>CSV Columns</th><th>DB Columns</th></tr>
+						<tr ng-repeat="(k,v) in csvData.header">
+							<td>{{v}}
+							</td>
+							<td>
+							<select name="csvSelect{{$index}}" id="csvSelect{{$index}}"  class="form-control"
+								ng-model="selectedMap[$index]" ng-change="populatedDataMap($index,selectedMap[$index], v, k)">
+							    <option value="">Select Column</option>
+								<option ng-repeat="val in csvData.header"  value="{{val}}">
+           							{{val}}
+       							</option>
+							</select>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+				</div>	
+			</div>
+			<div class="box-footer">
+				<div class="col-md-12">
+					<a href ng-click="getCSVDBMap()" id="mapBtn" class="btn btn-primary pull-right">View Mapped Object</a>	
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="col-md-9">
 	 <div class="row">
+	 	<div class="col-md-12">
 		<div class="box box-info">
             <div class="box-header with-border">
-              <h3 class="box-title">CSV DATA</h3>
+              <h3 class="box-title" ng-if="csvFile!=null">{{csvFile}}</h3>
+               <h3 class="box-title" ng-if="csvFile==''">File Content</h3>
               <div class="box-tools pull-right">
-                	<div class="col-md-10">
+                	<div class="pull-right">
              	  		<input type="number" min="1" max="{{csvData.rowObj.length}}" class="form-control" ng-model="pageSize">
              	 </div>
               </div>
             </div>
             <div class="box-body ">
-              <div class="table-responsive" style="height:300px">
+              <div class="table-responsive" style="height:500px">
               	<input type="text" ng-model="search"  class="form-control" placeholder="Search by any column" />
-                <table class="table table-condensed table-nowrap">
+                <table class="table table-striped table-nowrap">
                 	<tbody>
 						<tr>
 							<th ng-repeat="(k,v) in csvData.header">{{v}}</th>
@@ -153,42 +192,12 @@ color:#fff
             </div>
           </div>
           </div>
+          </div>
           	<div class="row">
-		<div class="box box-info">
-            <div class="box-header with-border">
-				<strong>CSV - DB COLUMN MAPPING</strong>
-			</div>
-			<div class="box-body">
-				<div class="table-responsive" style="height:300px">
-				<table class="table table-bordered">
-					<tbody>
-						<tr><th>CSV Columns</th><th>DB Columns</th></tr>
-						<tr ng-repeat="(k,v) in csvData.header">
-							<td>{{k}} {{v}}
-							</td>
-							<td>
-							<select name="csvSelect{{$index}}" id="csvSelect{{$index}}"  class="form-control"
-								ng-model="selectedMap[$index]" ng-change="populatedDataMap($index,selectedMap[$index], v, k)">
-							    <option value="">SELECT COLUMN</option>
-								<option ng-repeat="val in csvData.header"  value="{{val}}">
-           							{{val}}
-       							</option>
-							</select>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-				</div>	
-			</div>
-			<div class="box-footer">
-				<div class="col-md-12">
-					<a href ng-click="getCSVDBMap()" id="mapBtn" class="btn btn-primary pull-right">View Mapped Object</a>	
-				</div>
-			</div>
-		</div>
+		
 	</div>
 	</div>
-
+	</div>
 	</div>
 	<div class="row">	
 	
