--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
+
 <!doctype html>
-<html lang="en"  ng-app="testAPP">
+<html lang="en"  ng-app="eatSafeApp">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css"	href="components/bootstrap/dist/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" 	href="components/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css"	href="css/AdminLTE.min.css">
+<link rel="stylesheet" type="text/css"	href="css/app.css">
 <script type="text/javascript" 	src="components/jquery/dist/jQuery-2.1.4.min.js"></script>
 <script type="text/javascript" 	src="components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/angular.min.js"></script>
@@ -14,60 +16,9 @@
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/drop-controller.js"></script>
 <script type="text/javascript" src="js/services/csv-service.js"></script>
-<style>
-#dropzone {
-	border: 2px dashed #ccc;
-	width: 300px;
-	height: 200px;
-}
-
-.upload-drop-zone {
-	    height: 41px;
-    border-width: 4px;
-    margin-bottom: 0px;
-}
-
-/* skin.css Style*/
-.upload-drop-zone {
-	color: #ccc;
-	border-style: dashed;
-	border-color: #ccc;
-	line-height: 32px;
-	text-align: center
-}
-
-.upload-drop-zone.drop {
-	color: #222;
-	border-color: #222;
-}
-.table-nowrap td {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-
-}
-body{
-background-color:#42383826
-}
-.pagination {
-    display: inline-block;
-    padding-left: 0;
-    margin: 0px 0;
-    border-radius: 4px;
-}
-
-.currentSelected{
-	background:rgba(60, 141, 188, 0.58);
-    color:#fff;
-}
-.currentSelected a{
-color:#fff
-}
-
-.table-striped>tbody>tr:nth-of-type(odd) {
-    background-color: #dcd7d78a;
-}
-</style>
+<script type="text/javascript" src="js/services/eatsafe-service.js"></script>
+<script type="text/javascript" src="js/constants/constants.js"></script>
+<script type="text/javascript" src="js/jstorage.js"></script>
 </head>
 <body>
    <div ng-controller="dropController">
@@ -78,9 +29,10 @@ color:#fff
 		   <div class="box-header with-border">
               <h3 class="box-title">CSV DROP ZONE</h3>
               <div class="box-tools pull-right">
-                <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
-                </button>
-                <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+               <select type="dataselect" name="dataselect" class="form-control">
+               <option value="establishment" selected>Establishment</option>
+               <option value="inspection">Inspection</option>
+               </select>
               </div>
             </div>
 			 <div class="box-body">
@@ -99,7 +51,7 @@ color:#fff
 				<strong>CSV - DB COLUMN MAPPING</strong>
 			</div>
 			<div class="box-body">
-				<div class="table-responsive" style="height:350px">
+				<div class="table-responsive" style="height:320px">
 				<table class="table table-striped">
 					<tbody>
 						<tr><th>CSV Columns</th><th>DB Columns</th></tr>
@@ -110,7 +62,7 @@ color:#fff
 							<select name="csvSelect{{$index}}" id="csvSelect{{$index}}"  class="form-control" ng-click="getCurrentVal($index)"
 								ng-model="selectedMap[$index]" ng-change="populatedDataMap($index,selectedMap[$index], k,v)">
 							    <option value="">Select Column</option>
-								<option ng-repeat="val in csvData.header"  value="{{val}}">
+								<option ng-repeat="val in dbColsArray"  value="{{val}}">
            							{{val}}
        							</option>
 							</select>
@@ -148,8 +100,8 @@ color:#fff
              	 </div>
               </div>
             </div>
-            <div class="box-body ">
-              <div class="table-responsive" style="height:500px">
+            <div class="box-body">
+              <div class="table-responsive" style="height:470px">
               	<input type="text" ng-model="search"  class="form-control" placeholder="Search by any column" />
                 <table class="table table-striped table-nowrap">
                 	<tbody>
@@ -169,47 +121,48 @@ color:#fff
               </div>
             </div>
             <div class="box-footer clearfix" ">
-            	<div class="col-md-8" ng-if="csvData.rowObj.length>0">
-            		<!-- <pagination page="currentPage" max-size="noOfPages"  class="pagination"
-            		ng-model="currentPage"  total-items="totalItems" items-per-page="entryLimit" boundary-link-numbers="true" rotate="true" force-ellipses="true"></pagination> -->
-            	
-           			 <dir-pagination-controls boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)">
-           			 	<ul class="pagination" ng-if="1 < pages.length || !autoHide">
-    <li ng-if="boundaryLinks" ng-class="{ disabled : pagination.current == 1 }">
-        <a href="" ng-click="setCurrent(1)">&laquo;</a>
-    </li>
-    <li ng-if="directionLinks" ng-class="{ disabled : pagination.current == 1 }">
-        <a href="" ng-click="setCurrent(pagination.current - 1)">&lsaquo;</a>
-    </li>
-    <li ng-repeat="pageNumber in pages track by tracker(pageNumber, $index)" ng-class="{ active : pagination.current == pageNumber, disabled : pageNumber == '...' }">
-        <a href="" ng-click="setCurrent(pageNumber)">{{ pageNumber }}</a>
-    </li>
+	<div class="col-md-6" >
+		<dir-pagination-controls boundary-links="true"
+			on-page-change="pageChangeHandler(newPageNumber)" ng-if="csvData.rowObj.length>0">
+		<ul class="pagination" ng-if="1 < pages.length || !autoHide">
+			<li ng-if="boundaryLinks"
+				ng-class="{ disabled : pagination.current == 1 }"><a
+				href="" ng-click="setCurrent(1)">&laquo;</a></li>
+			<li ng-if="directionLinks"
+				ng-class="{ disabled : pagination.current == 1 }"><a
+				href="" ng-click="setCurrent(pagination.current - 1)">&lsaquo;</a>
+			</li>
+			<li
+				ng-repeat="pageNumber in pages track by tracker(pageNumber, $index)"
+				ng-class="{ active : pagination.current == pageNumber, disabled : pageNumber == '...' }">
+				<a href="" ng-click="setCurrent(pageNumber)">{{
+					pageNumber }}</a>
+			</li>
 
-    <li ng-if="directionLinks" ng-class="{ disabled : pagination.current == pagination.last }">
-        <a href="" ng-click="setCurrent(pagination.current + 1)">&rsaquo;</a>
-    </li>
-    <li ng-if="boundaryLinks"  ng-class="{ disabled : pagination.current == pagination.last }">
-        <a href="" ng-click="setCurrent(pagination.last)">&raquo;</a>
-    </li>
-</ul>
-           			 </dir-pagination-controls>    
-				</div>
-				<div class="col-md-4" ng-if="csvData.rowObj.length>0">
-					<a href  class="btn btn-primary pull-right">Total Records: {{csvData.rowObj.length}}</a>	
-				</div>
-            </div>
-          </div>
-          </div>
-          </div>
-          	<div class="row">
-		
+			<li ng-if="directionLinks"
+				ng-class="{ disabled : pagination.current == pagination.last }">
+				<a href="" ng-click="setCurrent(pagination.current + 1)">&rsaquo;</a>
+			</li>
+			<li ng-if="boundaryLinks"
+				ng-class="{ disabled : pagination.current == pagination.last }">
+				<a href="" ng-click="setCurrent(pagination.last)">&raquo;</a>
+			</li>
+		</ul>
+		</dir-pagination-controls>
+	</div>
+	   <div class="col-md-4" >
+			<a href  class="btn btn-primary pull-right" ng-if="csvData.records>0">Total Records: {{csvData.records}}</a>	
+			<a href  class="btn btn-primary pull-right" ng-if="csvData.records==0">No Records available</a>
+		</div>
+		<div class="col-md-2" >
+			<a href  class="btn btn-primary pull-right" ng-click="saveData()">SAVE</a>	
+		</div>
+         </div>
+       </div>
+       </div>
+       </div>
 	</div>
 	</div>
-	</div>
-	</div>
-	<div class="row">	
-	
-
 	</div>
 	</div>
 </body>
